--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
 	margin: 0;
 }
 nav {
-    background: #171a21;
+    background: #aaaaaa;
     float: left;
     max-width: 160px;
     margin: 0;
@@ -137,6 +137,18 @@ h4 {
 	color: #000000;
 	padding-top: 8px;
 }
+
+h5 {
+    margin-top: 3em;
+    margin-bottom: 1px;
+	font-family: "Droid Sans Mono";
+	font-size: 16px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: bold;
+	line-height: 1px;
+	color: #000000;
+}
 p {
 	font-family: "Droid Sans Mono";
 	font-size: 12px;
@@ -147,12 +159,18 @@ p {
 	color: #000000;
 }
 blockquote {
+    text-align: left;
 	font-family: "Droid Sans Mono";
 	font-size: 21px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 400;
 	line-height: 30px;
+    margin-left: 10em;
+    max-width: 800px;
+    border: 1px solid grey;
+    margin-block: 10px;
+    padding: 10px;
 }
 pre {
 	font-family: "Droid Sans Mono";
@@ -186,9 +204,9 @@ a {
     text-align: left;
 	color: #000000;
 }
-tr:nth-child(even){background-color: #213649}
-tr:nth-child(odd){background-color: #182734}
-tr:hover{background-color:#2a475e}
+tr:nth-child(even){background-color: #b0b0b0}
+tr:nth-child(odd){background-color: #8b8b8b}
+
 
 th {
 	text-align: left;
